# Mailing-project-Web-Android

./: CMakeLists.txt  DockerFile.web  Dockerfile.server  Dockerfile.webserver  README.md  docker-compose.yml  local.properties  main.cpp  settings.gradle.kts  settings.json
